--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <title>Happy birthday to you!</title>
     <style>
-        body {
-
-        }
         .wrapper {
             float: left;
             width: 100%;
@@ -14,8 +11,10 @@
         }
         
         img {
-            width: 100%;
-            height: 100%;
+            width: 80%;
+            height: 80%;
+            margin-left: 10%;
+            margin-right: 10%;
         }
         
         h1 {
